tests/fixtures/positive/style/EqualsNullCall.kt
package style

fun example(x: Any?) {
    if (x.equals(null)) {
        println("is null")
    }
}
