tests/fixtures/negative/style/EqualsNullCall.kt
package style

fun example(x: Any?) {
    if (x == null) {
        println("is null")
    }
}
